--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+
+        <!-- AOS animation -->
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
+
     </head>
 
     <body>
@@ -465,13 +470,14 @@
                             <div class="h-100"
                                 style="border: 50px solid; border-color: transparent #1C352D transparent #1C352D;">
                                 <img src="img/for-about.jpg"
-                                    class="img-fluid w-100 h-100" alt>
+                                    class="img-fluid w-100 h-100"
+                                    alt>
                             </div>
                         </div>
                         <div class="col-lg-7"
                             style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
                             <h5 class="section-about-title pe-3">About Us</h5>
-                            <h1 class="mb-4">Welcome to <span
+                            <h1 data-aos="fade-up" class="mb-4">Welcome to <span
                                     class="text-primary">Real Estate</span></h1>
                             <p class="mb-4">Lorem ipsum dolor sit amet
                                 consectetur
@@ -521,7 +527,7 @@
                                         Service</p>
                                 </div>
                             </div>
-                            <a
+                            <a data-aos="fade-up"
                                 class="btn btn-primary rounded-pill py-3 px-5 mt-2"
                                 href>Read More</a>
                         </div>
@@ -535,8 +541,9 @@
                 <div class="container py-5">
                     <div class="mx-auto text-center mb-5"
                         style="max-width: 900px;">
-                        <h5 class="section-title px-3">Our Gallery</h5>
-                        <h1 class="mb-0">gallery</h1>
+                        <h5 data-aos="zoom-in" class="section-title px-3">Our
+                            Gallery</h5>
+                        <h1 data-aos="zoom-in" class="mb-0">gallery</h1>
                     </div>
                     <div class="tab-class text-center">
                         <div class="tab-content">
@@ -547,7 +554,7 @@
                                         <div class="row g-4">
                                             <div class="col-lg-6 col-6">
                                                 <div class="destination-img">
-                                                    <img
+                                                    <img data-aos="zoom-in"
                                                         class="img-fluid rounded w-100"
                                                         src="img/destination-1.jpg"
                                                         alt>
@@ -562,7 +569,7 @@
                                             </div>
                                             <div class="col-lg-6 col-6">
                                                 <div class="destination-img">
-                                                    <img
+                                                    <img data-aos="zoom-in"
                                                         class="img-fluid rounded w-100"
                                                         src="img/destination-2.jpg"
                                                         alt>
@@ -577,7 +584,7 @@
                                             </div>
                                             <div class="col-lg-6 col-6">
                                                 <div class="destination-img">
-                                                    <img
+                                                    <img data-aos="zoom-in"
                                                         class="img-fluid rounded w-100"
                                                         src="img/destination-7.jpg"
                                                         alt>
@@ -592,7 +599,7 @@
                                             </div>
                                             <div class="col-lg-6 col-6">
                                                 <div class="destination-img">
-                                                    <img
+                                                    <img data-aos="zoom-in"
                                                         class="img-fluid rounded w-100"
                                                         src="img/destination-8.jpg"
                                                         alt>
@@ -719,10 +726,12 @@
                             style="display: flex; justify-content:end;">
                             <div class="h-100">
                                 <div class="frame">
-                                    <img src="img/about-imgs.jpg"
+                                    <img data-aos="zoom-out"
+                                        src="img/about-imgs.jpg"
                                         alt="Big Image"
                                         class="big-img shadow-lg">
-                                    <img src="img/about-imgs.jpg"
+                                    <img data-aos="zoom-out"
+                                        src="img/about-imgs.jpg"
                                         alt="Small Image"
                                         class="small-img img-fluid ">
                                 </div>
@@ -738,9 +747,10 @@
                 <div class="container py-5">
                     <div class="mx-auto text-center mb-5"
                         style="max-width: 900px;">
-                        <h5 class="section-title px-3">Explore Our
+                        <h5 data-aos="zoom-in"
+                            class="section-title px-3">Explore Our
                             Amenities</h5>
-                        <h1 class="mb-4">Our Amenities</h1>
+                        <h1 data-aos="zoom-in" class="mb-4">Our Amenities</h1>
                         <p class="mb-0">Lorem ipsum dolor sit amet consectetur
                             adipisicing elit. Laborum tempore nam, architecto
                             doloremque velit explicabo? Voluptate sunt eveniet
@@ -757,7 +767,8 @@
                                 <div class="row g-3">
                                     <div class="col-md-6 col-lg-4 col-6">
                                         <div class="national-item">
-                                            <img src="img/explore-tour-1.jpg"
+                                            <img data-aos="zoom-in"
+                                                src="img/explore-tour-1.jpg"
                                                 class="img-fluid w-100 rounded"
                                                 alt="Image">
                                             <div class="national-content">
@@ -771,7 +782,8 @@
                                     </div>
                                     <div class="col-md-6 col-lg-4 col-6">
                                         <div class="national-item">
-                                            <img src="img/explore-tour-2.jpg"
+                                            <img data-aos="zoom-in"
+                                                src="img/explore-tour-2.jpg"
                                                 class="img-fluid w-100 rounded"
                                                 alt="Image">
                                             <div class="national-content">
@@ -785,7 +797,8 @@
                                     </div>
                                     <div class="col-md-6 col-lg-4 col-6">
                                         <div class="national-item">
-                                            <img src="img/explore-tour-3.jpg"
+                                            <img data-aos="zoom-in"
+                                                src="img/explore-tour-3.jpg"
                                                 class="img-fluid w-100 rounded"
                                                 alt="Image">
                                             <div class="national-content">
@@ -800,7 +813,8 @@
                                     </div>
                                     <div class="col-md-6 col-lg-4 col-6">
                                         <div class="national-item">
-                                            <img src="img/explore-tour-4.jpg"
+                                            <img data-aos="zoom-in"
+                                                src="img/explore-tour-4.jpg"
                                                 class="img-fluid w-100 rounded"
                                                 alt="Image">
                                             <div class="national-content">
@@ -815,7 +829,8 @@
                                     </div>
                                     <div class="col-md-6 col-lg-4 col-6">
                                         <div class="national-item">
-                                            <img src="img/explore-tour-5.jpg"
+                                            <img data-aos="zoom-in"
+                                                src="img/explore-tour-5.jpg"
                                                 class="img-fluid w-100 rounded"
                                                 alt="Image">
                                             <div class="national-content">
@@ -833,7 +848,8 @@
                                     </div>
                                     <div class="col-md-6 col-lg-4 col-6">
                                         <div class="national-item">
-                                            <img src="img/explore-tour-6.jpg"
+                                            <img data-aos="zoom-in"
+                                                src="img/explore-tour-6.jpg"
                                                 class="img-fluid w-100 rounded"
                                                 alt="Image">
                                             <div class="national-content">
@@ -863,8 +879,10 @@
                 <div class="container py-5">
                     <div class="mx-auto text-center mb-5"
                         style="max-width: 900px;">
-                        <h5 class="section-title px-3">Packages</h5>
-                        <h1 class="mb-0">Explore Our Property Packages</h1>
+                        <h5 data-aos="zoom-in"
+                            class="section-title px-3">Packages</h5>
+                        <h1 data-aos="zoom-in" class="mb-0">Explore Our Property
+                            Packages</h1>
                     </div>
                     <div class="packages-carousel owl-carousel">
                         <div class="packages-item">
@@ -1082,7 +1100,7 @@
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-6"
                             style="display: flex; justify-content: center;">
-                            <iframe
+                            <iframe data-aos="zoom-in"
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.4119889742933!2d77.37474657475637!3d28.61741197567303!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce5be306febdb%3A0xa25f25cb323b6eab!2sAAJneeti%20Connect%20Ltd.!5e0!3m2!1sen!2sin!4v1756894813367!5m2!1sen!2sin"
                                 width="460"
                                 height="460"
@@ -1093,8 +1111,9 @@
                         </div>
                         <div class="col-lg-6"
                             style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
-                            <h5 class="section-about-title pe-3">Location</h5>
-                            <h1 class="mb-4">Welcome to <span
+                            <h5 data-aos="zoom-in"
+                                class="section-about-title pe-3">Location</h5>
+                            <h1 data-aos="zoom-in" class="mb-4">Welcome to <span
                                     class="text-primary">Real Estate</span></h1>
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12 d-flex">
@@ -1160,9 +1179,11 @@
                 <div class="container py-5">
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-6">
-                            <h5 class="section-booking-title pe-3">Know about
+                            <h5 data-aos="slide-up"
+                                class="section-booking-title pe-3">Know about
                                 us</h5>
-                            <h1 class="text-white mb-4">About Developer</h1>
+                            <h1 data-aos="slide-up"
+                                class="text-white mb-4">About Developer</h1>
                             <p class="text-white mb-4">Lorem ipsum dolor sit
                                 amet
                                 consectetur adipisicing elit. Aspernatur maxime
@@ -1188,7 +1209,8 @@
                                 More</a>
                         </div>
                         <div class="col-lg-6">
-                            <h1 class="text-white mb-3">Explore Our Projects
+                            <h1 data-aos="slide-up"
+                                class="text-white mb-3">Explore Our Projects
                                 Deals</h1>
                             <p class="text-white  mb-4">Get <span
                                     class="text-warning">50% Off</span> On Your
@@ -1319,6 +1341,8 @@
             <script src="lib/waypoints/waypoints.min.js"></script>
             <script src="lib/owlcarousel/owl.carousel.min.js"></script>
             <script src="lib/lightbox/js/lightbox.min.js"></script>
+            <script
+                src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 
             <!-- Template Javascript -->
             <script src="js/main.js"></script>
@@ -1330,5 +1354,13 @@
                  }, 5000); 
                  });
             </script>
+            <script>
+              AOS.init({
+              duration: 1000,   // animation duration (ms)
+              offset: 100,      // trigger point
+              once: true,       // animation runs only once
+              });
+           </script>
+
         </body>
     </html>
