--- a/index.html
+++ b/index.html
@@ -117,13 +117,16 @@
                                 <div class="p-4" style="max-width: 600px;">
                                     <h4
                                         class="text-white text-md-start text-uppercase fw-bold mb-2"
-                                        style="letter-spacing: 3px;">Explore The
+                                        style="letter-spacing: 3px;"
+                                        data-aos="zoom-in">Explore The
                                         Property</h4>
                                     <h3
-                                        class="display-6 text-md-start mt-2 text-center text-capitalize text-white mb-2">Let's
+                                        class="display-6 text-md-start mt-2 text-center text-capitalize text-white mb-2"
+                                        data-aos="zoom-in">Let's
                                         The Property Together!</h3>
                                     <p
-                                        class="mb-2 fs-5 text-md-start d-none d-sm-block">Lorem
+                                        class="mb-2 fs-5 text-md-start d-none d-sm-block"
+                                        data-aos="fade-up">Lorem
                                         Ipsum is simply
                                         dummy text of the printing and
                                         typesetting industry. Lorem Ipsum has
