--- a/index.html
+++ b/index.html
@@ -668,8 +668,9 @@
                     <div class="row g-5 align-items-center">
                         <div class="col-lg-6"
                             style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
-                            <h5 class="section-about-title pe-3">Highlights</h5>
-                            <h1 class="mb-4">Welcome to <span
+                            <h5 data-aos="zoom-in"
+                                class="section-about-title pe-3">Highlights</h5>
+                            <h1 data-aos="zoom-in" class="mb-4">Welcome to <span
                                     class="text-primary">Real Estate</span></h1>
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12 d-flex">
@@ -754,7 +755,8 @@
                             class="section-title px-3">Explore Our
                             Amenities</h5>
                         <h1 data-aos="zoom-in" class="mb-4">Our Amenities</h1>
-                        <p class="mb-0">Lorem ipsum dolor sit amet consectetur
+                        <p data-aos="zoom-in" class="mb-0">Lorem ipsum dolor sit
+                            amet consectetur
                             adipisicing elit. Laborum tempore nam, architecto
                             doloremque velit explicabo? Voluptate sunt eveniet
                             fuga
